methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:5: error: not found: value baissebrosse
        baissebrosse()
        ^SlugHunting:7: error: not found: value levebrosse
        levebrosse()
        ^